# BEV_Autonomous_Driving

./: .gitignore  COORDINATE_FIX_GUIDE.md  USAGE_GUIDE.md  analyze_training_data.py
scripts/: data_collector_node.py
src/: test_integration.py
src/ros-bridge/YOLOP/lib/config/: default.py
src/ros-bridge/YOLOP/lib/core/: postprocess.py
src/ros-bridge/YOLOP/lib/dataset/: __init__.py  yolop_txt.py
src/ros-bridge/YOLOP/lib/utils/: plot.py
src/ros-bridge/YOLOP/tools/: test.py
src/ros-bridge/YOLOP/yolop_dataset/: README.dataset.txt  README.roboflow.txt  convert_to_yolop_dataset.py  dataset_cleanup.py  split_by_prefix_intersection.py
src/ros-bridge/YOLOP/yolop_dataset/da_seg_annotations/train/: _annotations.coco.json
src/ros-bridge/YOLOP/yolop_dataset/det_annotations/test/: frame_000033_png.rf.c6e44707fafe017963d006476f7a0b39.txt  frame_000099_png.rf.1f45e30f8da26a1a064fabbe89ca0f74.txt  frame_000579_png.rf.b0380f359a624d31b3dd9428c53239a8.txt  frame_000603_png.rf.bbc9868485904bee567f65a489bd2367.txt  frame_000612_png.rf.c885650677770006349176e95e3c999f.txt  frame_000624_png.rf.7226548e88e56da822962cd3cbcc2723.txt  frame_001110_png.rf.d9008fed5ba5384f6db92526e74650aa.txt  frame_001122_png.rf.6ba064f578f2d8c8ae453d58fea8446b.txt  frame_001128_png.rf.9f4ec1220d063e14dbf673e924610911.txt  frame_001374_png.rf.9c3635a68169aa84c79ce976e670e8c2.txt  frame_001509_png.rf.da1c4eb6694f258cd90def1fb3e2da1c.txt  frame_001716_png.rf.d572a57a1988c63cda5e62de93bcec0a.txt  frame_002004_png.rf.27e71bc696cad8a691ee0d7ca1d12a81.txt  frame_002016_png.rf.adc8799ac81154f4877c1f029e219d63.txt  frame_002028_png.rf.e1e27a712026543893153824ff4cf72a.txt  frame_002157_png.rf.4dc12669747af49cb875863babe8fca9.txt  frame_002163_png.rf.eaf04c28f941f8c2d183e58001ec2b8b.txt  frame_002166_png.rf.cdfd477170507882030acef02a613c05.txt  frame_002187_png.rf.21842fb1756775f134afc933ca3a2f42.txt  frame_002193_png.rf.4a1c203c0986eb4165ff947e8961571c.txt  frame_002229_png.rf.670422d24f5cb41d789d4d25bb160836.txt  frame_002295_png.rf.147e961e649ba0904054f49c925bb38a.txt
src/ros-bridge/YOLOP/yolop_dataset/det_annotations/train/: frame_000015_png.rf.b7004b111243db5aa3afb8063c7912dc.txt  (+65 more)
src/ros-bridge/bev_planner_integration/: CMakeLists.txt  package.xml
src/ros-bridge/bev_planner_integration/adapters/: __init__.py  yolop_adapter.py
src/ros-bridge/bev_planner_integration/config/: bev_planner_config.yaml  coordinate_config.yaml
src/ros-bridge/bev_planner_integration/launch/: bev_planner.launch  bev_planner_batch.launch  global_with_bev_planner.launch
src/ros-bridge/bev_planner_integration/scripts/: bev_planner_batch_node.py  bev_planner_node.py  coordinate_validator.py  data_collector_node.py  model_comparison.py  safety_analyzer.py  test_angular_velocity.py  train_bev_planner.py  trajectory_frame_republisher.py  trajectory_visualizer_node.py
src/ros-bridge/bev_planner_integration/src/adapters/: test_adapter.py
src/ros-bridge/bev_planner_integration/src/models/: __init__.py  safety_checker.py  simplified_planner.py
src/ros-bridge/bev_planner_integration/src/utils/: dataset.py
src/ros-bridge/carla_camera_publisher/: CMakeLists.txt  README_BATCH_INFERENCE.md  README_GLOBAL_PATH.md  package.xml
src/ros-bridge/carla_camera_publisher/config/: global_path_viz.rviz
src/ros-bridge/carla_camera_publisher/launch/: carla_cleanup.launch  complete_batch_system.launch  global_path_autonomous_driving.launch  multiple_bev_cameras.launch  pathformer_merge.launch  publish_carla_cam.launch  pure_pursuit_drive.launch  yolop_batch_inference.launch  yolop_bev_batch_inference.launch  yolop_inference.launch
src/ros-bridge/carla_camera_publisher/scripts/: Pure_Pursuit.py  astar_path_planner.py  carla_cleanup.py  global_path_pure_pursuit.py  pathformer_inference_node.py  publish_carla_cam.py  publish_carla_cam_attach.py  publish_multiple_carla_cam.py  save_pose_csv.py  spawn_carla_ego_vehicle.py  spawn_vehicle_at_first_waypoint.py  yolop_batch_inference_node.py  yolop_grid_fusion_node.py  yolop_inference_node.py
src/ros-bridge/carla_global_path/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ros-bridge/carla_global_path/config/: global_path_viz.rviz  objects.json
src/ros-bridge/carla_global_path/launch/: global_path_planner.launch
src/ros-bridge/carla_global_path/resource/: carla_global_path
src/ros-bridge/carla_global_path/src/: __init__.py  global_path_planner.py
src/ros-bridge/carla_ros_bridge/src/carla_ros_bridge/: bridge.py
src/ros-bridge/pathformer/: __init__.py  requirements.txt  run.py
src/ros-bridge/pathformer/data_provider/: data_factory.py  data_loader.py
src/ros-bridge/pathformer/exp/: exp_main.py
src/ros-bridge/pathformer/layers/: AMS.py
src/ros-bridge/pathformer/models/: PathFormer.py  __init__.py
src/ros-bridge/pathformer/scripts/: build_bev_dataset.py
src/ros-bridge/ros_ws/src/carla_yolop_pub/: CMakeLists.txt  package.xml
training_results/: config.json
training_results/tensorboard/: events.out.tfevents.1753789418.carla-MS-7D09.1034105.0  events.out.tfevents.1753789484.carla-MS-7D09.1034316.0  events.out.tfevents.1753789523.carla-MS-7D09.1034600.0  events.out.tfevents.1753789622.carla-MS-7D09.1034932.0  events.out.tfevents.1753789687.carla-MS-7D09.1035248.0  events.out.tfevents.1753789743.carla-MS-7D09.1035552.0  events.out.tfevents.1753789867.carla-MS-7D09.1036137.0  events.out.tfevents.1753789970.carla-MS-7D09.1036443.0  events.out.tfevents.1753790091.carla-MS-7D09.1036846.0  events.out.tfevents.1753790198.carla-MS-7D09.1037476.0
training_results_v2/: config.json
training_results_v2/tensorboard/: events.out.tfevents.1753796542.carla-MS-7D09.1052000.0
(+83 files in other folders)
