<?xml version="1.0"?>
<package format="2">
  <name>carla_camera_publisher</name>
  <version>0.1.0</version>
  <description>Publish top-down RGB camera images from CARLA to a ROS topic.</description>
  <maintainer email="carla@example.com">CARLA Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
  </export>
</package> 